--- a/assets/css/artistas.css
+++ b/assets/css/artistas.css
@@ -1,4 +1,5 @@
 .artista.fresa-kill {
-  grid-row-start: 3; }
+  grid-row-start: 3;
+  grid-row-end: 4; }
 
 /*# sourceMappingURL=artistas.css.map */
