--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,14 @@ button {
 2.0 Fuentes
 --------------------------------------------------------------*/
 @font-face {
+  font-family: 'Grange';
+  src: url("../../fonts/Grange.ttf") format("truetype");
+  font-weight: 200;
+  font-style: normal; }
+@font-face {
+  font-family: 'Knockout HTF27-JuniorBantamwt';
+  src: url("../../fonts/knockout-htf27-juniorbantamwt.ttf") format("truetype"); }
+@font-face {
   font-family: 'Bebas Neue';
   src: url("../fonts/bebasneue-thin.eot");
   src: url("../fonts/bebasneue-thin.woff") format("woff"), url("../fonts/bebasneue-thin.ttf") format("truetype");
@@ -118,9 +126,80 @@ button {
 --------------------------------------------------------------*/
 /*FUENTES*/
 /*COLORES*/
-.artista.fresa-kill {
+.violeta .artista.fresa-kill {
   grid-row-start: 3;
   grid-row-end: 4; }
+.violeta .artista.amazonas-crew {
+  grid-row-start: 4;
+  grid-row-end: 5;
+  margin-top: 3%;
+  margin-bottom: -3%; }
+.violeta .artista.femme-dargent {
+  grid-row-start: 6;
+  grid-row-end: 7;
+  margin-top: 3%;
+  margin-bottom: -3%; }
+.violeta .artista.ibiza-pareo {
+  grid-row-start: 8;
+  grid-row-end: 9;
+  margin-top: 3%;
+  margin-bottom: -3%; }
+.violeta .artista.she-devils {
+  grid-row-start: 10;
+  grid-row-end: 12;
+  margin-top: 3%;
+  margin-bottom: 3%; }
+.violeta .artista.anita-tijoux {
+  grid-row-start: 13;
+  grid-row-end: 15;
+  margin-top: 0%;
+  margin-bottom: 5%; }
+.violeta .artista.marilina {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 16;
+  grid-row-end: 19;
+  margin-top: 9%;
+  margin-bottom: 4%; }
+.violeta .artista.miss-bolivia {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 20;
+  grid-row-end: 22;
+  margin-top: 0%;
+  margin-bottom: 0%; }
+
+.verde .artista.hienas {
+  grid-row-start: 5;
+  grid-row-end: 6;
+  margin-top: 3%;
+  margin-bottom: -5%; }
+.verde .artista.las-ex {
+  grid-row-start: 7;
+  grid-row-end: 8;
+  margin-top: 3%;
+  margin-bottom: -3%; }
+.verde .artista.bimbo-custodio {
+  grid-row-start: 8;
+  grid-row-end: 10;
+  margin-top: 4%;
+  margin-bottom: -3%; }
+.verde .artista.misssil {
+  grid-row-start: 12;
+  grid-row-end: 13;
+  margin-top: -3%;
+  margin-bottom: 0.5%; }
+.verde .artista.mami {
+  grid-row-start: 13;
+  grid-row-end: 15;
+  margin-top: 1%;
+  margin-bottom: 5%; }
+
+.sofar .artista.panoramicas {
+  grid-row-start: 5;
+  grid-row-end: 6;
+  margin-top: 3%;
+  margin-bottom: -3%; }
 
 /*--------------------------------------------------------------
 5.0 General
@@ -202,24 +281,32 @@ button {
     width: 75vw; }
     .wrapper main #schedule .escenario.violeta .artista {
       background: #566CCB; }
-    .wrapper main #schedule .escenario .escenario-grid {
+    .wrapper main #schedule .escenario.verde .artista {
+      background: #00934D; }
+    .wrapper main #schedule .escenario.sofar .artista {
+      background: #FE4A64; }
+    .wrapper main #schedule .escenario > .escenario-grid {
       display: grid;
       grid-template-columns: 1fr;
-      grid-template-rows: repeat(20, 22vw); }
-      .wrapper main #schedule .escenario .escenario-grid .artista {
+      grid-template-rows: repeat(24, 11vw); }
+      .wrapper main #schedule .escenario > .escenario-grid .artista {
         color: white;
         display: flex;
         flex-flow: row nowrap;
         justify-content: space-between;
         align-items: center;
-        width: 80%;
+        width: 60vw;
         padding: 0 4.8vw; }
-        .wrapper main #schedule .escenario .escenario-grid .artista .nombre {
-          font-family: serif;
-          font-size: 5vw; }
-        .wrapper main #schedule .escenario .escenario-grid .artista .horario {
+        .wrapper main #schedule .escenario > .escenario-grid .artista .nombre p {
+          font-family: 'Oswald';
+          font-size: 4vw;
+          text-transform: uppercase;
+          white-space: nowrap; }
+        .wrapper main #schedule .escenario > .escenario-grid .artista .horario {
+          font-family: 'Open Sans', sans-serif;
           color: white;
-          font-size: 3.38vw; }
+          font-size: 3.38vw;
+          white-space: nowrap; }
 .wrapper footer {
   display: flex;
   justify-content: center;
@@ -228,8 +315,79 @@ button {
     width: 85%;
     margin: 5vw 0; }
 
-.artista.fresa-kill {
+.violeta .artista.fresa-kill {
   grid-row-start: 3;
   grid-row-end: 4; }
+.violeta .artista.amazonas-crew {
+  grid-row-start: 4;
+  grid-row-end: 5;
+  margin-top: 3%;
+  margin-bottom: -3%; }
+.violeta .artista.femme-dargent {
+  grid-row-start: 6;
+  grid-row-end: 7;
+  margin-top: 3%;
+  margin-bottom: -3%; }
+.violeta .artista.ibiza-pareo {
+  grid-row-start: 8;
+  grid-row-end: 9;
+  margin-top: 3%;
+  margin-bottom: -3%; }
+.violeta .artista.she-devils {
+  grid-row-start: 10;
+  grid-row-end: 12;
+  margin-top: 3%;
+  margin-bottom: 3%; }
+.violeta .artista.anita-tijoux {
+  grid-row-start: 13;
+  grid-row-end: 15;
+  margin-top: 0%;
+  margin-bottom: 5%; }
+.violeta .artista.marilina {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 16;
+  grid-row-end: 19;
+  margin-top: 9%;
+  margin-bottom: 4%; }
+.violeta .artista.miss-bolivia {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 20;
+  grid-row-end: 22;
+  margin-top: 0%;
+  margin-bottom: 0%; }
+
+.verde .artista.hienas {
+  grid-row-start: 5;
+  grid-row-end: 6;
+  margin-top: 3%;
+  margin-bottom: -5%; }
+.verde .artista.las-ex {
+  grid-row-start: 7;
+  grid-row-end: 8;
+  margin-top: 3%;
+  margin-bottom: -3%; }
+.verde .artista.bimbo-custodio {
+  grid-row-start: 8;
+  grid-row-end: 10;
+  margin-top: 4%;
+  margin-bottom: -3%; }
+.verde .artista.misssil {
+  grid-row-start: 12;
+  grid-row-end: 13;
+  margin-top: -3%;
+  margin-bottom: 0.5%; }
+.verde .artista.mami {
+  grid-row-start: 13;
+  grid-row-end: 15;
+  margin-top: 1%;
+  margin-bottom: 5%; }
+
+.sofar .artista.panoramicas {
+  grid-row-start: 5;
+  grid-row-end: 6;
+  margin-top: 3%;
+  margin-bottom: -3%; }
 
 /*# sourceMappingURL=style.css.map */
