--- a/assets/css/artistas.scss
+++ b/assets/css/artistas.scss
@@ -86,6 +86,30 @@
             margin-top: 1%;
             margin-bottom: 5%;
         }
+        &.sara-hebe{
+            grid-row-start: 15;
+            grid-row-end: 17;
+            margin-top: 3%;
+            margin-bottom: 3%;
+        }
+        &.ms-nina{
+            grid-row-start: 19;
+            grid-row-end: 20;
+            margin-top: -5%;
+            margin-bottom: 0%;
+        }
+        &.color{
+            grid-row-start: 20;
+            grid-row-end: 22;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
+        &.kumbia-queers{
+            grid-row-start: 22;
+            grid-row-end: 24;
+            margin-top: 1%;
+            margin-bottom: 4%;
+        }
     }
 }
 .sofar{
@@ -95,7 +119,69 @@
             grid-row-end: 6;
             margin-top: 3%;
             margin-bottom: -3%;
-
         }
+        &.piba-berreta{
+            grid-row-start: 7;
+            grid-row-end: 8;
+            margin-top: 3%;
+            margin-bottom: -3%;
+        }
+        &.agua-florida{
+            grid-row-start: 9;
+            grid-row-end: 10;
+            margin-top: 3%;
+            margin-bottom: -3%;
+        }
+        &.html{
+            grid-row-start: 12;
+            grid-row-end: 13;
+            margin-top: -3%;
+            margin-bottom: 3%;
+        }
+    }
+}
+.teatro{
+    .artista{
+        &.bimbotiquin{
+            grid-row-start: 1;
+            grid-row-end: 3;
+            margin-top: 1%;
+            margin-bottom: 4%;
+        }
+        &.ofelia-fernandez{
+            grid-row-start: 4;
+            grid-row-end: 7;
+            margin-top: 10%;
+            margin-bottom: 5%;
+        }
+    }
+}
+.sum{
+    .artista{
+        &.autodefensa{
+            grid-row-start: 2;
+            grid-row-end: 3;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
+        &.twerk{
+            grid-row-start: 4;
+            grid-row-end: 5;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
+        &.autodefensa2{
+            grid-row-start: 6;
+            grid-row-end: 7;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
+        &.twerk2{
+            grid-row-start: 8;
+            grid-row-end: 9;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
+        
     }
 }
