--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,12 +277,13 @@ button {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+body {
+  background: #262524; }
+
 .wrapper {
   margin: 0 auto;
   padding: 0;
-  /* max-width = min-width de mediaqueries para XL screens  */
-  max-width: 1480px;
-  background: #262524; }
+  /* max-width = min-width de mediaqueries para XL screens  */ }
 
 .wrapper h1,
 .wrapper h2,
@@ -411,7 +412,8 @@ button {
         justify-content: space-between;
         align-items: center;
         width: 60vw;
-        padding: 0 4.8vw; }
+        padding: 0 4.8vw;
+        z-index: 5; }
         .wrapper main #schedule .escenario > .escenario-grid .artista .nombre p {
           font-family: 'Oswald';
           font-size: 4vw;
@@ -430,6 +432,138 @@ button {
     width: 85%;
     margin: 5vw 0; }
 
+@media screen and (min-width: 768px) {
+  .wrapper header img {
+    margin: 5vw 0;
+    width: 70vw; }
+  .wrapper main {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 4vw 0 0; }
+    .wrapper main #customDots {
+      width: 100%;
+      margin: 0 0 10vw; }
+      .wrapper main #customDots .slick-dots {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        width: 100%;
+        height: 20vw; }
+        .wrapper main #customDots .slick-dots li {
+          display: flex;
+          justify-content: center;
+          width: 20%;
+          border-bottom: 5px solid #F4B400; }
+          .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(1) {
+            border-bottom-color: #566CCB; }
+            .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(1) .tab {
+              color: #566CCB; }
+          .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(2) {
+            border-bottom-color: #00934D; }
+            .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(2) .tab {
+              color: #00934D; }
+          .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(3) {
+            border-bottom-color: #FE4A64; }
+            .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(3) .tab {
+              color: #FE4A64; }
+          .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(4) {
+            border-bottom-color: #72CCBD; }
+            .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(4) .tab {
+              color: #72CCBD; }
+          .wrapper main #customDots .slick-dots li .tab {
+            color: #F4B400;
+            font-family: 'Lobster', serif;
+            font-size: 3.86vw;
+            text-align: center;
+            min-height: 13vw; }
+            .wrapper main #customDots .slick-dots li .tab span {
+              display: block;
+              font-size: 75%; }
+    .wrapper main #horas-grid {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-auto-rows: 11vw;
+      justify-items: end;
+      width: 19vw; }
+      .wrapper main #horas-grid .hour span {
+        font-family: "Open Sans", sans-serif;
+        font-weight: bold;
+        position: relative;
+        width: 100%;
+        overflow-x: hidden; }
+        .wrapper main #horas-grid .hour span.purple {
+          color: #566CCB;
+          font-size: 2.4vw;
+          position: relative;
+          top: -2.1vw; }
+          .wrapper main #horas-grid .hour span.purple::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 10vw;
+            width: 64vw;
+            height: 1px;
+            border-bottom: 3px dotted #F4B400; }
+        .wrapper main #horas-grid .hour span.maize {
+          color: #F4B400;
+          font-size: 3.86vw;
+          position: relative;
+          top: -3vw; }
+          .wrapper main #horas-grid .hour span.maize::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 14vw;
+            width: 70vw;
+            border-bottom: 5px dashed #F4B400; }
+    .wrapper main #schedule {
+      width: 75vw; }
+      .wrapper main #schedule .escenario.violeta .artista {
+        background: #566CCB; }
+      .wrapper main #schedule .escenario.verde .artista {
+        background: #00934D; }
+      .wrapper main #schedule .escenario.sofar .artista {
+        background: #FE4A64; }
+      .wrapper main #schedule .escenario.teatro .artista {
+        background: #72CCBD; }
+        .wrapper main #schedule .escenario.teatro .artista p {
+          color: #262524; }
+      .wrapper main #schedule .escenario.sum .artista {
+        background: #F4B400; }
+        .wrapper main #schedule .escenario.sum .artista p {
+          color: #262524; }
+      .wrapper main #schedule .escenario > .escenario-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(24, 11vw); }
+        .wrapper main #schedule .escenario > .escenario-grid .artista {
+          color: white;
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: space-between;
+          align-items: center;
+          width: 60vw;
+          padding: 0 4.8vw;
+          z-index: 5; }
+          .wrapper main #schedule .escenario > .escenario-grid .artista .nombre p {
+            font-family: 'Oswald';
+            font-size: 4vw;
+            text-transform: uppercase;
+            white-space: nowrap; }
+          .wrapper main #schedule .escenario > .escenario-grid .artista .horario {
+            font-family: 'Open Sans', sans-serif;
+            color: white;
+            font-size: 3.38vw;
+            white-space: nowrap; }
+  .wrapper footer {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .wrapper footer img {
+      width: 85%;
+      margin: 5vw 0; } }
 .violeta .artista.fresa-kill {
   grid-row-start: 3;
   grid-row-end: 4; }
