--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -47,13 +47,15 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+body{
 
+    background: $main-grey;
+}
 .wrapper {
     margin: 0 auto;
     padding: 0;
     /* max-width = min-width de mediaqueries para XL screens  */
-    max-width: 1480px;
-    background: $main-grey;
+    // max-width: 1480px;
 }
 
 .wrapper h1,
@@ -294,6 +296,7 @@
                         align-items: center;
                         width: 60vw;
                         padding: 0 4.8vw;
+                        z-index: 5;
 
                         .nombre {
                             p{
@@ -301,7 +304,6 @@
                                 font-size: 4vw;
                                 text-transform: uppercase;
                                 white-space: nowrap;
-                                
                             }
                         }
                         
@@ -327,6 +329,242 @@
         img {
             width: 85%;
             margin: 5vw 0;
+        }
+    }
+}
+
+@media screen and (min-width: 768px){
+    .wrapper {
+        header {
+    
+            img {
+                margin: 5vw 0;
+                width: 70vw;
+            }
+        }
+    
+    
+        main {
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin: 4vw 0 0;
+    
+            #customDots{
+                width: 100%;
+                margin: 0 0 10vw;
+    
+                .slick-dots{
+                    display: flex;
+                    flex-flow: row nowrap;
+                    align-items: center;
+                    
+                    width: 100%;
+                    height: 20vw;
+    
+                    li{
+    
+                        display: flex;
+                        justify-content: center;
+                        width: 20%;
+                        border-bottom: 5px solid $maize;
+    
+                        &.slick-active:nth-of-type(1){
+                            border-bottom-color: $purple;
+                            .tab{
+                                color: $purple;
+                            }
+                        }
+                        &.slick-active:nth-of-type(2){
+                            border-bottom-color: $green;
+                            .tab{
+                                color: $green;
+                            }
+                        }
+                        &.slick-active:nth-of-type(3){
+                            border-bottom-color: $pink;
+                            .tab{
+                                color: $pink;
+                            }
+                        }
+                        &.slick-active:nth-of-type(4){
+                            border-bottom-color: $aqua;
+                            .tab{
+                                color: $aqua;
+                            }
+                        }
+    
+                        .tab{
+                            color: $maize;
+                            font-family: 'Lobster', serif;
+                            font-size: 3.86vw;
+                            text-align: center;
+    
+                            min-height: 13vw;
+    
+                            span{
+                                display: block;
+                                font-size: 75%;
+                            }
+                        }
+                    }
+                }
+    
+            }
+    
+            #horas-grid {
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-auto-rows: 11vw;
+                justify-items: end;
+    
+                width: 19vw;
+    
+                .hour {
+    
+                    span {
+                        font-family: $open-sans;
+                        font-weight: bold;
+                        position: relative;
+                        width: 100%;
+                        overflow-x: hidden;
+    
+                        &.purple {
+                            color: $purple;
+                            font-size: 2.4vw;
+    
+                            position: relative;
+                            top: -2.1vw;
+    
+                            &::after {
+                                content: '';
+                                position: absolute;
+                                top: 50%;
+                                left: 10vw;
+                                width: 64vw;
+                                height: 1px;
+                                border-bottom: 3px dotted $maize;
+                                // background-image: linear-gradient(to right, $maize 33%, rgba(255, 255, 255, 0) 0%);
+                                // background-position: bottom;
+                                // background-size: 3px 1px;
+                                // background-repeat: repeat-x;
+                            }
+    
+                        }
+    
+                        &.maize {
+                            color: $maize;
+                            font-size: 3.86vw;
+    
+                            position: relative;
+                            top: -3vw;
+    
+                            &::after {
+                                content: '';
+                                position: absolute;
+                                top: 50%;
+                                left: 14vw;
+                                width: 70vw;
+                                border-bottom: 5px dashed $maize;
+                                // background-image: linear-gradient(to right, black 33%, rgba(255, 255, 255, 0) 0%);
+                                // background-position: bottom;
+                                // background-size: 3px 1px;
+                                // background-repeat: repeat-x;
+                            }
+    
+                        }
+    
+                    }
+                }
+            }
+    
+            #schedule {
+                width: 75vw;
+             
+                .escenario {
+                    &.violeta {
+                        .artista {
+                            background: $purple;
+                        }
+                    }
+                    &.verde {
+                        .artista {
+                            background: $green;
+                        }
+                    }
+                    &.sofar {
+                        .artista {
+                            background: $pink;
+                        }
+                    }
+                    &.teatro {
+                        .artista {
+                            background: $aqua;
+                            p{
+    
+                                color: #262524;
+                            }
+                        }
+                    }
+                    &.sum {
+                        .artista {
+                            background: $maize;
+                            p{
+    
+                                color: #262524;
+                            }
+                        }
+                    }
+    
+                    >.escenario-grid {
+                        display: grid;
+                        grid-template-columns: 1fr;
+                        grid-template-rows: repeat(24, 11vw);
+    
+    
+                        .artista {
+                            color: white;
+                            display: flex;
+                            flex-flow: row nowrap;
+                            justify-content: space-between;
+                            align-items: center;
+                            width: 60vw;
+                            padding: 0 4.8vw;
+                            z-index: 5;
+    
+                            .nombre {
+                                p{
+                                    font-family: 'Oswald';
+                                    font-size: 4vw;
+                                    text-transform: uppercase;
+                                    white-space: nowrap;
+                                }
+                            }
+                            
+                            .horario {
+                                font-family: 'Open Sans', sans-serif;
+                                color: white;
+                                font-size: 3.38vw;
+                                white-space: nowrap;
+                            }
+                        }
+    
+                    }
+    
+                }
+            }
+        }
+    
+        footer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+    
+            img {
+                width: 85%;
+                margin: 5vw 0;
+            }
         }
     }
 }
