--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,8 @@ body {
 .wrapper {
   margin: 0 auto;
   padding: 0;
-  /* max-width = min-width de mediaqueries para XL screens  */ }
+  /* max-width = min-width de mediaqueries para XL screens  */
+  max-width: 768px; }
 
 .wrapper h1,
 .wrapper h2,
@@ -302,7 +303,8 @@ body {
   color: whitesmoke; }
   .wrapper header img {
     margin: 5vw 0;
-    width: 70vw; }
+    width: 70vw;
+    max-width: 326px; }
 .wrapper main {
   display: flex;
   flex-flow: row wrap;
@@ -430,140 +432,52 @@ body {
   align-items: center; }
   .wrapper footer img {
     width: 85%;
-    margin: 5vw 0; }
+    margin: 5vw 0;
+    max-width: 326px; }
 
 @media screen and (min-width: 768px) {
   .wrapper header img {
-    margin: 5vw 0;
-    width: 70vw; }
+    margin: calc( 768px / 100 * 5) 0;
+    width: calc( 768px / 100 * 70); }
   .wrapper main {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 4vw 0 0; }
+    margin: calc( 768px / 100 * 4) 0 0; }
     .wrapper main #customDots {
-      width: 100%;
-      margin: 0 0 10vw; }
+      margin: 0 0 calc( 768px / 100 * 10); }
       .wrapper main #customDots .slick-dots {
-        display: flex;
-        flex-flow: row nowrap;
-        align-items: center;
         width: 100%;
-        height: 20vw; }
-        .wrapper main #customDots .slick-dots li {
-          display: flex;
-          justify-content: center;
-          width: 20%;
-          border-bottom: 5px solid #F4B400; }
-          .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(1) {
-            border-bottom-color: #566CCB; }
-            .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(1) .tab {
-              color: #566CCB; }
-          .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(2) {
-            border-bottom-color: #00934D; }
-            .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(2) .tab {
-              color: #00934D; }
-          .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(3) {
-            border-bottom-color: #FE4A64; }
-            .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(3) .tab {
-              color: #FE4A64; }
-          .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(4) {
-            border-bottom-color: #72CCBD; }
-            .wrapper main #customDots .slick-dots li.slick-active:nth-of-type(4) .tab {
-              color: #72CCBD; }
-          .wrapper main #customDots .slick-dots li .tab {
-            color: #F4B400;
-            font-family: 'Lobster', serif;
-            font-size: 3.86vw;
-            text-align: center;
-            min-height: 13vw; }
-            .wrapper main #customDots .slick-dots li .tab span {
-              display: block;
-              font-size: 75%; }
+        height: calc( 768px / 100 * 20); }
+        .wrapper main #customDots .slick-dots li .tab {
+          font-size: calc( 768px / 100 * 3.86);
+          min-height: calc( 768px / 100 * 13); }
     .wrapper main #horas-grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-auto-rows: 11vw;
-      justify-items: end;
-      width: 19vw; }
-      .wrapper main #horas-grid .hour span {
-        font-family: "Open Sans", sans-serif;
-        font-weight: bold;
-        position: relative;
-        width: 100%;
-        overflow-x: hidden; }
-        .wrapper main #horas-grid .hour span.purple {
-          color: #566CCB;
-          font-size: 2.4vw;
-          position: relative;
-          top: -2.1vw; }
-          .wrapper main #horas-grid .hour span.purple::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 10vw;
-            width: 64vw;
-            height: 1px;
-            border-bottom: 3px dotted #F4B400; }
-        .wrapper main #horas-grid .hour span.maize {
-          color: #F4B400;
-          font-size: 3.86vw;
-          position: relative;
-          top: -3vw; }
-          .wrapper main #horas-grid .hour span.maize::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 14vw;
-            width: 70vw;
-            border-bottom: 5px dashed #F4B400; }
+      grid-auto-rows: calc( 768px / 100 * 11);
+      width: calc( 768px / 100 * 19); }
+      .wrapper main #horas-grid .hour span.purple {
+        font-size: calc( 768px / 100 * 2.4);
+        top: calc( 768px / 100 * -2.1); }
+        .wrapper main #horas-grid .hour span.purple::after {
+          left: calc( 768px / 100 * 10);
+          width: calc( 768px / 100 * 64); }
+      .wrapper main #horas-grid .hour span.maize {
+        font-size: calc( 768px / 100 * 3.86);
+        top: calc( 768px / 100 * -3); }
+        .wrapper main #horas-grid .hour span.maize::after {
+          left: calc( 768px / 100 * 14);
+          width: calc( 768px / 100 * 70); }
     .wrapper main #schedule {
-      width: 75vw; }
-      .wrapper main #schedule .escenario.violeta .artista {
-        background: #566CCB; }
-      .wrapper main #schedule .escenario.verde .artista {
-        background: #00934D; }
-      .wrapper main #schedule .escenario.sofar .artista {
-        background: #FE4A64; }
-      .wrapper main #schedule .escenario.teatro .artista {
-        background: #72CCBD; }
-        .wrapper main #schedule .escenario.teatro .artista p {
-          color: #262524; }
-      .wrapper main #schedule .escenario.sum .artista {
-        background: #F4B400; }
-        .wrapper main #schedule .escenario.sum .artista p {
-          color: #262524; }
+      width: calc( 768px / 100 * 75); }
       .wrapper main #schedule .escenario > .escenario-grid {
-        display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(24, 11vw); }
+        grid-template-rows: repeat(24, calc( 768px / 100 * 11)); }
         .wrapper main #schedule .escenario > .escenario-grid .artista {
-          color: white;
-          display: flex;
-          flex-flow: row nowrap;
-          justify-content: space-between;
-          align-items: center;
-          width: 60vw;
-          padding: 0 4.8vw;
-          z-index: 5; }
+          width: calc( 768px / 100 * 60);
+          padding: 0 calc( 768px / 100 * 4.8); }
           .wrapper main #schedule .escenario > .escenario-grid .artista .nombre p {
-            font-family: 'Oswald';
-            font-size: 4vw;
-            text-transform: uppercase;
-            white-space: nowrap; }
+            font-size: calc( 768px / 100 * 4); }
           .wrapper main #schedule .escenario > .escenario-grid .artista .horario {
-            font-family: 'Open Sans', sans-serif;
-            color: white;
-            font-size: 3.38vw;
-            white-space: nowrap; }
-  .wrapper footer {
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-    .wrapper footer img {
-      width: 85%;
-      margin: 5vw 0; } }
+            font-size: calc( 768px / 100 * 3.38); }
+  .wrapper footer img {
+    margin: calc( 768px / 100 * 5) 0; } }
 .violeta .artista.fresa-kill {
   grid-row-start: 3;
   grid-row-end: 4; }
