--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,7 +55,7 @@ body{
     margin: 0 auto;
     padding: 0;
     /* max-width = min-width de mediaqueries para XL screens  */
-    // max-width: 1480px;
+    max-width: $max-width-wrapper;
 }
 
 .wrapper h1,
@@ -105,6 +105,7 @@ body{
         img {
             margin: 5vw 0;
             width: 70vw;
+            max-width: 326px;
         }
     }
 
@@ -329,84 +330,37 @@ body{
         img {
             width: 85%;
             margin: 5vw 0;
+            max-width: 326px;
         }
     }
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: $max-width-wrapper){
+
     .wrapper {
-        header {
-    
+        header {    
+            
             img {
-                margin: 5vw 0;
-                width: 70vw;
+                margin: calc( #{$max-width-wrapper} / 100 * 5) 0;
+                width: calc( #{$max-width-wrapper} / 100 * 70);
             }
         }
     
     
         main {
-            display: flex;
-            flex-flow: row wrap;
-            justify-content: space-between;
-            align-items: flex-start;
-            margin: 4vw 0 0;
+            margin: calc( #{$max-width-wrapper} / 100 * 4) 0 0;
     
             #customDots{
-                width: 100%;
-                margin: 0 0 10vw;
+                margin: 0 0 calc( #{$max-width-wrapper} / 100 * 10);
     
-                .slick-dots{
-                    display: flex;
-                    flex-flow: row nowrap;
-                    align-items: center;
-                    
+                .slick-dots{                    
                     width: 100%;
-                    height: 20vw;
+                    height: calc( #{$max-width-wrapper} / 100 * 20);
     
                     li{
-    
-                        display: flex;
-                        justify-content: center;
-                        width: 20%;
-                        border-bottom: 5px solid $maize;
-    
-                        &.slick-active:nth-of-type(1){
-                            border-bottom-color: $purple;
-                            .tab{
-                                color: $purple;
-                            }
-                        }
-                        &.slick-active:nth-of-type(2){
-                            border-bottom-color: $green;
-                            .tab{
-                                color: $green;
-                            }
-                        }
-                        &.slick-active:nth-of-type(3){
-                            border-bottom-color: $pink;
-                            .tab{
-                                color: $pink;
-                            }
-                        }
-                        &.slick-active:nth-of-type(4){
-                            border-bottom-color: $aqua;
-                            .tab{
-                                color: $aqua;
-                            }
-                        }
-    
                         .tab{
-                            color: $maize;
-                            font-family: 'Lobster', serif;
-                            font-size: 3.86vw;
-                            text-align: center;
-    
-                            min-height: 13vw;
-    
-                            span{
-                                display: block;
-                                font-size: 75%;
-                            }
+                            font-size: calc( #{$max-width-wrapper} / 100 * 3.86);    
+                            min-height: calc( #{$max-width-wrapper} / 100 * 13);
                         }
                     }
                 }
@@ -414,63 +368,31 @@ body{
             }
     
             #horas-grid {
-                display: grid;
-                grid-template-columns: 1fr;
-                grid-auto-rows: 11vw;
-                justify-items: end;
-    
-                width: 19vw;
+                grid-auto-rows: calc( #{$max-width-wrapper} / 100 * 11);    
+                width: calc( #{$max-width-wrapper} / 100 * 19);
     
                 .hour {
     
-                    span {
-                        font-family: $open-sans;
-                        font-weight: bold;
-                        position: relative;
-                        width: 100%;
-                        overflow-x: hidden;
-    
+                    span {    
                         &.purple {
-                            color: $purple;
-                            font-size: 2.4vw;
+                            font-size: calc( #{$max-width-wrapper} / 100 * 2.4);
     
-                            position: relative;
-                            top: -2.1vw;
+                            top: calc( #{$max-width-wrapper} / 100 * -2.1);
     
                             &::after {
-                                content: '';
-                                position: absolute;
-                                top: 50%;
-                                left: 10vw;
-                                width: 64vw;
-                                height: 1px;
-                                border-bottom: 3px dotted $maize;
-                                // background-image: linear-gradient(to right, $maize 33%, rgba(255, 255, 255, 0) 0%);
-                                // background-position: bottom;
-                                // background-size: 3px 1px;
-                                // background-repeat: repeat-x;
+                                left: calc( #{$max-width-wrapper} / 100 * 10);
+                                width: calc( #{$max-width-wrapper} / 100 * 64);
                             }
     
                         }
     
                         &.maize {
-                            color: $maize;
-                            font-size: 3.86vw;
-    
-                            position: relative;
-                            top: -3vw;
+                            font-size: calc( #{$max-width-wrapper} / 100 * 3.86);
+                            top: calc( #{$max-width-wrapper} / 100 * -3);
     
                             &::after {
-                                content: '';
-                                position: absolute;
-                                top: 50%;
-                                left: 14vw;
-                                width: 70vw;
-                                border-bottom: 5px dashed $maize;
-                                // background-image: linear-gradient(to right, black 33%, rgba(255, 255, 255, 0) 0%);
-                                // background-position: bottom;
-                                // background-size: 3px 1px;
-                                // background-repeat: repeat-x;
+                                left: calc( #{$max-width-wrapper} / 100 * 14);
+                                width: calc( #{$max-width-wrapper} / 100 * 70);
                             }
     
                         }
@@ -480,73 +402,26 @@ body{
             }
     
             #schedule {
-                width: 75vw;
+                width: calc( #{$max-width-wrapper} / 100 * 75);
              
                 .escenario {
-                    &.violeta {
-                        .artista {
-                            background: $purple;
-                        }
-                    }
-                    &.verde {
-                        .artista {
-                            background: $green;
-                        }
-                    }
-                    &.sofar {
-                        .artista {
-                            background: $pink;
-                        }
-                    }
-                    &.teatro {
-                        .artista {
-                            background: $aqua;
-                            p{
-    
-                                color: #262524;
-                            }
-                        }
-                    }
-                    &.sum {
-                        .artista {
-                            background: $maize;
-                            p{
-    
-                                color: #262524;
-                            }
-                        }
-                    }
-    
                     >.escenario-grid {
-                        display: grid;
                         grid-template-columns: 1fr;
-                        grid-template-rows: repeat(24, 11vw);
+                        grid-template-rows: repeat(24, calc( #{$max-width-wrapper} / 100 * 11));
     
     
                         .artista {
-                            color: white;
-                            display: flex;
-                            flex-flow: row nowrap;
-                            justify-content: space-between;
-                            align-items: center;
-                            width: 60vw;
-                            padding: 0 4.8vw;
-                            z-index: 5;
+                            width: calc( #{$max-width-wrapper} / 100 * 60);
+                            padding: 0 calc( #{$max-width-wrapper} / 100 * 4.8);
     
                             .nombre {
                                 p{
-                                    font-family: 'Oswald';
-                                    font-size: 4vw;
-                                    text-transform: uppercase;
-                                    white-space: nowrap;
+                                    font-size: calc( #{$max-width-wrapper} / 100 * 4);
                                 }
                             }
                             
                             .horario {
-                                font-family: 'Open Sans', sans-serif;
-                                color: white;
-                                font-size: 3.38vw;
-                                white-space: nowrap;
+                                font-size: calc( #{$max-width-wrapper} / 100 * 3.38);
                             }
                         }
     
@@ -556,14 +431,9 @@ body{
             }
         }
     
-        footer {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-    
+        footer {    
             img {
-                width: 85%;
-                margin: 5vw 0;
+                margin: calc( #{$max-width-wrapper} / 100 * 5) 0;
             }
         }
     }
